# gemini-usage

./: .gitignore  CLAUDE.md  LICENSE  README.md  go.mod  go.sum  test_quick.py
_docs/: GEMINI_API_INTERNALS.md
_docs/recon/: README.md  recon.py  recon2.py  recon3.py  recon4.py
_python/: pyproject.toml
_python/src/gemini_usage/: config.py  cookies.py  main.py  server.py  usage_counter.py
cmd/gemini-cookies/: main.go
cmd/gemini-usage/: main.go
gemini/: client.go  config.go  cookies.go  cookies_browser.go  cookies_exec.go  doc.go  parse.go  tracker.go  usage.go
src/gemini_usage/: gemini_client.py
